// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`straight mb first short plunge doesnt trigger skillsot 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "greenArrow",
    "iLeft2": "greenArrow",
    "iLeft3": "greenArrow",
    "iLeft4": "greenArrow",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "yellowArrow",
    "iRight2": "yellowArrow",
    "iRight3": "yellowArrow",
    "iRight4": "yellowArrow",
    "iRight5": "yellowArrow",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSpinner": "",
    "iUpper21": "orangeArrow",
    "iUpper22": "orangeArrow",
    "iUpper31": "blueArrow",
    "iUpper32": "blueArrow",
    "iUpper33": "blueArrow",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnet1": Array [
      "Green",
    ],
    "lMagnet2": Array [
      "Green",
    ],
    "lMagnet3": Array [],
    "lMagnet4": Array [],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": false,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine47",
    "children": Array [
      Object {
        "_name": "DropBank48",
        "children": Array [],
        "name": "DropBank48",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank49",
        "children": Array [],
        "name": "DropBank49",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank50",
        "children": Array [],
        "name": "DropBank50",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank51",
        "children": Array [],
        "name": "DropBank51",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank52",
        "children": Array [],
        "name": "DropBank52",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank53",
        "children": Array [],
        "name": "DropBank53",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game57",
        "children": Array [
          Object {
            "_name": "Player58",
            "children": Array [
              Object {
                "_name": "ClearHoles59",
                "children": Array [],
                "name": "ClearHoles59",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball63",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete64",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter65",
                        "children": Array [],
                        "name": "DropBankResetter65",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter66",
                        "children": Array [],
                        "name": "DropBankResetter66",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter67",
                        "children": Array [],
                        "name": "DropBankResetter67",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter68",
                        "children": Array [],
                        "name": "DropBankResetter68",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter69",
                        "children": Array [],
                        "name": "DropBankResetter69",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter70",
                        "children": Array [],
                        "name": "DropBankResetter70",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete64",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                ],
                "name": "Ball63",
                "ownOuts": Object {},
                "state": Object {
                  "skillshot": undefined,
                  "tilted": false,
                },
              },
              Object {
                "_name": "Spinner60",
                "children": Array [],
                "name": "Spinner60",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit61",
                "children": Array [],
                "name": "LeftOrbit61",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "StraightMb76",
                "children": Array [],
                "name": "StraightMb76",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": "redArrow",
                  "iCenter2": "redArrow",
                  "iCenter3": "redArrow",
                  "iLeft1": "greenArrow",
                  "iLeft2": "greenArrow",
                  "iLeft3": "greenArrow",
                  "iLeft4": "greenArrow",
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": "yellowArrow",
                  "iRight2": "yellowArrow",
                  "iRight3": "yellowArrow",
                  "iRight4": "yellowArrow",
                  "iRight5": "yellowArrow",
                  "iUpper21": "orangeArrow",
                  "iUpper22": "orangeArrow",
                  "iUpper31": "blueArrow",
                  "iUpper32": "blueArrow",
                  "iUpper33": "blueArrow",
                  "lMiniReady": Array [],
                  "lRampArrow": Array [
                    Array [
                      "Green",
                      "fl",
                    ],
                  ],
                  "lockPost": false,
                  "miniDiverter": false,
                  "rampUp": false,
                  "shooterDiverter": false,
                },
                "state": Object {
                  "lockPost": false,
                  "state": Object {
                    "_": "starting",
                    "addABallReady": true,
                    "secondBallLocked": false,
                    "starting": true,
                  },
                },
              },
              Object {
                "_name": "PlayerOverrides62",
                "children": Array [],
                "name": "PlayerOverrides62",
                "ownOuts": Object {
                  "kickerEnable": undefined,
                  "leftGate": undefined,
                  "miniFlipperEnable": undefined,
                  "rampUp": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player58",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMiniReady": Array [
                "Red",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [
                "Orange",
              ],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": undefined,
            },
            "state": Object {
              "_score": 64010,
              "ball": "Ball63",
              "chips": 2,
              "closeShooter": false,
              "focus": "StraightMb76",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "miniReady": false,
              "modesQualified": Array [],
              "rampUp": true,
            },
          },
        ],
        "name": "Game57",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
          "playerUp": 0,
          "players": Array [
            "Player58",
          ],
        },
      },
      Object {
        "_name": "MachineOverrides54",
        "children": Array [
          Object {
            "_name": "EosPulse55",
            "children": Array [],
            "name": "EosPulse55",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides54",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine47",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnet1": Array [
        "Green",
      ],
      "lMagnet2": Array [
        "Green",
      ],
      "lMagnet3": Array [],
      "lMagnet4": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "ballsInTrough": 3,
      "ballsLocked": 1,
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 5,
        "lastChange": 104642,
        "lastClosed": 104317,
        "lastOpened": 104642,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb lock holds ball 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "greenArrow",
    "iLeft2": "greenArrow",
    "iLeft3": "greenArrow",
    "iLeft4": "greenArrow",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "yellowArrow",
    "iRight2": "yellowArrow",
    "iRight3": "yellowArrow",
    "iRight4": "yellowArrow",
    "iRight5": "yellowArrow",
    "iSS1": Object {
      "fill": [Function],
    },
    "iSS2": Object {
      "fill": [Function],
    },
    "iSS3": Object {
      "fill": [Function],
    },
    "iSS4": Object {
      "fill": [Function],
    },
    "iSS5": Object {
      "fill": [Function],
    },
    "iSS6": Object {
      "fill": [Function],
    },
    "iSpinner": "",
    "iUpper21": "orangeArrow",
    "iUpper22": "orangeArrow",
    "iUpper31": "blueArrow",
    "iUpper32": "blueArrow",
    "iUpper33": "blueArrow",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnet1": Array [
      "Green",
    ],
    "lMagnet2": Array [
      "Green",
    ],
    "lMagnet3": Array [],
    "lMagnet4": Array [],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": false,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine128",
    "children": Array [
      Object {
        "_name": "DropBank129",
        "children": Array [],
        "name": "DropBank129",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank130",
        "children": Array [],
        "name": "DropBank130",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank131",
        "children": Array [],
        "name": "DropBank131",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank132",
        "children": Array [],
        "name": "DropBank132",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank133",
        "children": Array [],
        "name": "DropBank133",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank134",
        "children": Array [],
        "name": "DropBank134",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game138",
        "children": Array [
          Object {
            "_name": "Player139",
            "children": Array [
              Object {
                "_name": "ClearHoles140",
                "children": Array [],
                "name": "ClearHoles140",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball144",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete145",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter146",
                        "children": Array [],
                        "name": "DropBankResetter146",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter147",
                        "children": Array [],
                        "name": "DropBankResetter147",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter148",
                        "children": Array [],
                        "name": "DropBankResetter148",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter149",
                        "children": Array [],
                        "name": "DropBankResetter149",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter150",
                        "children": Array [],
                        "name": "DropBankResetter150",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter151",
                        "children": Array [],
                        "name": "DropBankResetter151",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete145",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                  Object {
                    "_name": "Skillshot158",
                    "children": Array [],
                    "name": "Skillshot158",
                    "ownOuts": Object {
                      "iSS1": Object {
                        "fill": [Function],
                      },
                      "iSS2": Object {
                        "fill": [Function],
                      },
                      "iSS3": Object {
                        "fill": [Function],
                      },
                      "iSS4": Object {
                        "fill": [Function],
                      },
                      "iSS5": Object {
                        "fill": [Function],
                      },
                      "iSS6": Object {
                        "fill": [Function],
                      },
                      "iSS7": Object {
                        "fill": [Function],
                      },
                      "leftGate": false,
                      "rightGate": false,
                      "shooterDiverter": true,
                      "upperMagnet": undefined,
                    },
                    "state": Object {
                      "curAward": 0,
                      "gateMode": "Closed",
                      "shooterOpen": true,
                    },
                  },
                ],
                "name": "Ball144",
                "ownOuts": Object {},
                "state": Object {
                  "skillshot": "Skillshot158",
                  "tilted": false,
                },
              },
              Object {
                "_name": "Spinner141",
                "children": Array [],
                "name": "Spinner141",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit142",
                "children": Array [],
                "name": "LeftOrbit142",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "StraightMb157",
                "children": Array [],
                "name": "StraightMb157",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": "redArrow",
                  "iCenter2": "redArrow",
                  "iCenter3": "redArrow",
                  "iLeft1": "greenArrow",
                  "iLeft2": "greenArrow",
                  "iLeft3": "greenArrow",
                  "iLeft4": "greenArrow",
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": "yellowArrow",
                  "iRight2": "yellowArrow",
                  "iRight3": "yellowArrow",
                  "iRight4": "yellowArrow",
                  "iRight5": "yellowArrow",
                  "iUpper21": "orangeArrow",
                  "iUpper22": "orangeArrow",
                  "iUpper31": "blueArrow",
                  "iUpper32": "blueArrow",
                  "iUpper33": "blueArrow",
                  "lMiniReady": Array [],
                  "lRampArrow": Array [
                    Array [
                      "Green",
                      "fl",
                    ],
                  ],
                  "lockPost": false,
                  "miniDiverter": false,
                  "rampUp": false,
                  "shooterDiverter": false,
                },
                "state": Object {
                  "lockPost": false,
                  "state": Object {
                    "_": "starting",
                    "addABallReady": false,
                    "secondBallLocked": false,
                    "starting": true,
                  },
                },
              },
              Object {
                "_name": "PlayerOverrides143",
                "children": Array [],
                "name": "PlayerOverrides143",
                "ownOuts": Object {
                  "kickerEnable": undefined,
                  "leftGate": undefined,
                  "miniFlipperEnable": undefined,
                  "rampUp": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player139",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMiniReady": Array [
                "Red",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [
                "Orange",
              ],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": undefined,
            },
            "state": Object {
              "_score": 63000,
              "ball": "Ball144",
              "chips": 2,
              "closeShooter": false,
              "focus": "StraightMb157",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "miniReady": false,
              "modesQualified": Array [],
              "rampUp": true,
            },
          },
        ],
        "name": "Game138",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
          "playerUp": 0,
          "players": Array [
            "Player139",
          ],
        },
      },
      Object {
        "_name": "MachineOverrides135",
        "children": Array [
          Object {
            "_name": "EosPulse136",
            "children": Array [],
            "name": "EosPulse136",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides135",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine128",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnet1": Array [
        "Green",
      ],
      "lMagnet2": Array [
        "Green",
      ],
      "lMagnet3": Array [],
      "lMagnet4": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": true,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "ballsInTrough": 3,
      "ballsLocked": 1,
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 0,
        "lastChange": 53612,
        "lastClosed": 48957,
        "lastOpened": 53612,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      "lockDown": true,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb mb add a ball outlane drain 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": undefined,
    "iCenter1": "",
    "iCenter2": "",
    "iCenter3": "",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnet1": Array [
      "Green",
    ],
    "lMagnet2": Array [
      "Green",
    ],
    "lMagnet3": Array [],
    "lMagnet4": Array [],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Red",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [
      Object {
        "color": "Yellow",
        "flashing": true,
        "freq": 5,
      },
    ],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine187",
    "children": Array [
      Object {
        "_name": "DropBank188",
        "children": Array [],
        "name": "DropBank188",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank189",
        "children": Array [],
        "name": "DropBank189",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank190",
        "children": Array [],
        "name": "DropBank190",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank191",
        "children": Array [],
        "name": "DropBank191",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank192",
        "children": Array [],
        "name": "DropBank192",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank193",
        "children": Array [],
        "name": "DropBank193",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game197",
        "children": Array [
          Object {
            "_name": "Player198",
            "children": Array [
              Object {
                "_name": "ClearHoles199",
                "children": Array [],
                "name": "ClearHoles199",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball203",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete204",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter205",
                        "children": Array [],
                        "name": "DropBankResetter205",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter206",
                        "children": Array [],
                        "name": "DropBankResetter206",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter207",
                        "children": Array [],
                        "name": "DropBankResetter207",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter208",
                        "children": Array [],
                        "name": "DropBankResetter208",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter209",
                        "children": Array [],
                        "name": "DropBankResetter209",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter210",
                        "children": Array [],
                        "name": "DropBankResetter210",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete204",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                ],
                "name": "Ball203",
                "ownOuts": Object {},
                "state": Object {
                  "skillshot": undefined,
                  "tilted": false,
                },
              },
              Object {
                "_name": "Spinner200",
                "children": Array [],
                "name": "Spinner200",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit201",
                "children": Array [],
                "name": "LeftOrbit201",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "NoMode218",
                "children": Array [
                  Object {
                    "_name": "Restart219",
                    "children": Array [],
                    "name": "Restart219",
                    "ownOuts": Object {
                      "lRampArrow": Array [
                        Object {
                          "color": "Yellow",
                          "flashing": true,
                          "freq": 5,
                        },
                      ],
                      "rampUp": false,
                    },
                    "state": Object {
                      "flips": 20,
                    },
                  },
                ],
                "name": "NoMode218",
                "ownOuts": undefined,
                "state": Object {},
              },
              Object {
                "_name": "PlayerOverrides202",
                "children": Array [],
                "name": "PlayerOverrides202",
                "ownOuts": Object {
                  "kickerEnable": undefined,
                  "leftGate": undefined,
                  "miniFlipperEnable": undefined,
                  "rampUp": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player198",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMiniReady": Array [
                "Red",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [
                "Orange",
              ],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [
                Array [
                  "Green",
                  "fl",
                ],
              ],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": true,
            },
            "state": Object {
              "_score": 63010,
              "ball": "Ball203",
              "chips": 2,
              "closeShooter": false,
              "focus": "NoMode218",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "miniReady": false,
              "modesQualified": Array [],
              "rampUp": true,
            },
          },
        ],
        "name": "Game197",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
          "playerUp": 0,
          "players": Array [
            "Player198",
          ],
        },
      },
      Object {
        "_name": "MachineOverrides194",
        "children": Array [
          Object {
            "_name": "EosPulse195",
            "children": Array [],
            "name": "EosPulse195",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides194",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine187",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnet1": Array [
        "Green",
      ],
      "lMagnet2": Array [
        "Green",
      ],
      "lMagnet3": Array [],
      "lMagnet4": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "ballsInTrough": 4,
      "ballsLocked": 0,
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 2,
        "lastChange": 112614,
        "lastClosed": 112368,
        "lastOpened": 112614,
        "minOffTime": 250,
        "minOnTime": 500,
        "name": "outhole",
        "row": 0,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb ramp lowers 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "",
    "iCenter2": "",
    "iCenter3": "",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [
      "White",
    ],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnet1": Array [
      "Green",
    ],
    "lMagnet2": Array [
      "Green",
    ],
    "lMagnet3": Array [],
    "lMagnet4": Array [],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Red",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [
      "White",
    ],
    "lRampStartMb": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [
      "White",
    ],
    "lShooterStartHand": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine10",
    "children": Array [
      Object {
        "_name": "DropBank11",
        "children": Array [],
        "name": "DropBank11",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank12",
        "children": Array [],
        "name": "DropBank12",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank13",
        "children": Array [],
        "name": "DropBank13",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank14",
        "children": Array [],
        "name": "DropBank14",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank15",
        "children": Array [],
        "name": "DropBank15",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank16",
        "children": Array [],
        "name": "DropBank16",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game20",
        "children": Array [
          Object {
            "_name": "Player21",
            "children": Array [
              Object {
                "_name": "ClearHoles22",
                "children": Array [],
                "name": "ClearHoles22",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball26",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete27",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter28",
                        "children": Array [],
                        "name": "DropBankResetter28",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter29",
                        "children": Array [],
                        "name": "DropBankResetter29",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter30",
                        "children": Array [],
                        "name": "DropBankResetter30",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter31",
                        "children": Array [],
                        "name": "DropBankResetter31",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter32",
                        "children": Array [],
                        "name": "DropBankResetter32",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter33",
                        "children": Array [],
                        "name": "DropBankResetter33",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete27",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                ],
                "name": "Ball26",
                "ownOuts": Object {},
                "state": Object {
                  "skillshot": undefined,
                  "tilted": false,
                },
              },
              Object {
                "_name": "Spinner23",
                "children": Array [],
                "name": "Spinner23",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit24",
                "children": Array [],
                "name": "LeftOrbit24",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "Poker34",
                "children": Array [],
                "name": "Poker34",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": undefined,
                  "iCenter2": undefined,
                  "iCenter3": undefined,
                  "iLeft1": undefined,
                  "iLeft2": undefined,
                  "iLeft3": undefined,
                  "iLeft4": undefined,
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": undefined,
                  "iRight2": undefined,
                  "iRight3": undefined,
                  "iRight4": undefined,
                  "iRight5": undefined,
                  "iUpper21": undefined,
                  "iUpper22": undefined,
                  "iUpper31": undefined,
                  "iUpper32": undefined,
                  "iUpper33": undefined,
                  "lEjectShowCards": Array [
                    "White",
                  ],
                  "lRampShowCards": Array [
                    "White",
                  ],
                  "lShooterShowCards": Array [
                    "White",
                  ],
                  "lockPost": false,
                  "rampUp": false,
                  "shooterDiverter": true,
                  "upperEject": false,
                },
                "state": Object {
                  "bet": 100,
                  "closeShooter": false,
                  "dealerCardsUsed": Array [],
                  "dealerHand": Array [
                    Object {
                      "flipped": true,
                      "num": 3,
                      "suit": "h",
                    },
                    Object {
                      "flipped": true,
                      "num": 4,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "flipped": false,
                      "num": 5,
                      "suit": "s",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "flipped": false,
                      "num": 4,
                      "suit": "h",
                    },
                    Object {
                      "flipped": true,
                      "num": 2,
                      "suit": "c",
                    },
                  ],
                  "dealerHandDesc": "Pair",
                  "newMbs": Array [
                    Array [
                      "StraightMb",
                      Array [
                        Object {
                          "num": 7,
                          "suit": "s",
                        },
                        Object {
                          "num": 8,
                          "suit": "c",
                        },
                        Object {
                          "num": 9,
                          "suit": "c",
                        },
                        Object {
                          "num": 10,
                          "suit": "s",
                        },
                        Object {
                          "num": 11,
                          "suit": "s",
                        },
                      ],
                    ],
                  ],
                  "newModes": Array [],
                  "playerCardsUsed": Array [],
                  "playerHand": Array [
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "c",
                    },
                    Object {
                      "num": 9,
                      "suit": "c",
                    },
                    Object {
                      "num": 10,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "c",
                    },
                  ],
                  "playerHandDesc": "Straight",
                  "playerWins": undefined,
                  "pot": 1400,
                  "slots": Array [
                    Object {
                      "num": 1,
                      "suit": "d",
                    },
                    null,
                    null,
                    null,
                    Object {
                      "num": 1,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "d",
                    },
                    null,
                    null,
                    Object {
                      "num": 11,
                      "suit": "h",
                    },
                    Object {
                      "num": 8,
                      "suit": "s",
                    },
                    Object {
                      "num": 10,
                      "suit": "h",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 8,
                      "suit": "d",
                    },
                    Object {
                      "num": 10,
                      "suit": "d",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "h",
                    },
                    Object {
                      "num": 9,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "c",
                    },
                  ],
                  "step": 7,
                },
              },
              Object {
                "_name": "PlayerOverrides25",
                "children": Array [],
                "name": "PlayerOverrides25",
                "ownOuts": Object {
                  "kickerEnable": undefined,
                  "leftGate": undefined,
                  "miniFlipperEnable": undefined,
                  "rampUp": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player21",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMiniReady": Array [
                "Red",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [
                "Orange",
              ],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [
                Array [
                  "Green",
                  "fl",
                ],
              ],
              "lShooterStartHand": Array [
                Array [
                  "Green",
                  "fl",
                ],
              ],
              "leftMagnet": false,
              "rampUp": false,
              "shooterDiverter": true,
            },
            "state": Object {
              "_score": 58000,
              "ball": "Ball26",
              "chips": 2,
              "closeShooter": false,
              "focus": "Poker34",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "miniReady": false,
              "modesQualified": Array [],
              "rampUp": true,
            },
          },
        ],
        "name": "Game20",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
          "playerUp": 0,
          "players": Array [
            "Player21",
          ],
        },
      },
      Object {
        "_name": "MachineOverrides17",
        "children": Array [
          Object {
            "_name": "EosPulse18",
            "children": Array [],
            "name": "EosPulse18",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides17",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine10",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnet1": Array [
        "Green",
      ],
      "lMagnet2": Array [
        "Green",
      ],
      "lMagnet3": Array [],
      "lMagnet4": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "ballsInTrough": 3,
      "ballsLocked": 0,
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 3,
        "lastChange": 30053,
        "lastClosed": 30053,
        "lastOpened": undefined,
        "minOffTime": 150,
        "minOnTime": 10,
        "name": "right 3",
        "row": 2,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb second short plunge does trigger skillsot 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnet1": Array [],
    "lMagnet2": Array [],
    "lMagnet3": Array [],
    "lMagnet4": Array [],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Red",
    ],
    "lPower1": Array [],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": true,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": false,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine87",
    "children": Array [
      Object {
        "_name": "DropBank88",
        "children": Array [],
        "name": "DropBank88",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank89",
        "children": Array [],
        "name": "DropBank89",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank90",
        "children": Array [],
        "name": "DropBank90",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank91",
        "children": Array [],
        "name": "DropBank91",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank92",
        "children": Array [],
        "name": "DropBank92",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank93",
        "children": Array [],
        "name": "DropBank93",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game97",
        "children": Array [
          Object {
            "_name": "Player98",
            "children": Array [
              Object {
                "_name": "ClearHoles99",
                "children": Array [],
                "name": "ClearHoles99",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball103",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete104",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter105",
                        "children": Array [],
                        "name": "DropBankResetter105",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter106",
                        "children": Array [],
                        "name": "DropBankResetter106",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter107",
                        "children": Array [],
                        "name": "DropBankResetter107",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter108",
                        "children": Array [],
                        "name": "DropBankResetter108",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter109",
                        "children": Array [],
                        "name": "DropBankResetter109",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter110",
                        "children": Array [],
                        "name": "DropBankResetter110",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete104",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                ],
                "name": "Ball103",
                "ownOuts": Object {},
                "state": Object {
                  "skillshot": undefined,
                  "tilted": false,
                },
              },
              Object {
                "_name": "Spinner100",
                "children": Array [],
                "name": "Spinner100",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit101",
                "children": Array [],
                "name": "LeftOrbit101",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "StraightMb116",
                "children": Array [],
                "name": "StraightMb116",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": "redArrow",
                  "iCenter2": "redArrow",
                  "iCenter3": "redArrow",
                  "iLeft1": undefined,
                  "iLeft2": undefined,
                  "iLeft3": undefined,
                  "iLeft4": undefined,
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": undefined,
                  "iRight2": undefined,
                  "iRight3": undefined,
                  "iRight4": undefined,
                  "iRight5": undefined,
                  "iUpper21": undefined,
                  "iUpper22": undefined,
                  "iUpper31": undefined,
                  "iUpper32": undefined,
                  "iUpper33": undefined,
                  "lMiniReady": Array [],
                  "lRampArrow": undefined,
                  "lockPost": false,
                  "miniDiverter": false,
                  "rampUp": true,
                  "shooterDiverter": false,
                },
                "state": Object {
                  "lockPost": undefined,
                  "state": Object {
                    "_": "bankLit",
                    "bankLit": true,
                    "curBank": DropBank {
                      "coil": IncreaseSolenoid {
                        "actual": false,
                        "board": Solenoid16 {
                          "board": 0,
                        },
                        "changeAttempts": 0,
                        "debounce": 5,
                        "fake": [Function],
                        "i": 0,
                        "id": 438,
                        "initial": 50,
                        "lastActualChange": undefined,
                        "max": 100,
                        "ms": 50,
                        "name": "centerBank",
                        "num": 8,
                        "onFire": [Function],
                        "pending": false,
                        "resetPeriod": 2000,
                        "steps": 3,
                        "val": false,
                        "wait": 1000,
                      },
                      "ended": false,
                      "gPriority": undefined,
                      "lastChildren": Array [],
                      "listeners": Array [
                        Object {
                          "callback": "onAllDown",
                          "num": 1253,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": "onEnd",
                          "num": 1254,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": "onEnding",
                          "num": 1255,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": "onTargetDown",
                          "num": 1256,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": [Function],
                          "num": 1257,
                          "predicates": Array [
                            [Function],
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": [Function],
                          "num": 1258,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                      ],
                      "num": 90,
                      "onEnding": [Function],
                      "switches": Array [
                        Switch {
                          "_state": false,
                          "column": 3,
                          "lastChange": 0,
                          "lastClosed": undefined,
                          "lastOpened": undefined,
                          "minOffTime": 150,
                          "minOnTime": 10,
                          "name": "center left",
                          "row": 4,
                        },
                        Switch {
                          "_state": false,
                          "column": 2,
                          "lastChange": 44162,
                          "lastClosed": 29556,
                          "lastOpened": 44162,
                          "minOffTime": 150,
                          "minOnTime": 10,
                          "name": "center center",
                          "row": 4,
                        },
                        Switch {
                          "_state": false,
                          "column": 1,
                          "lastChange": 44164,
                          "lastClosed": 28122,
                          "lastOpened": 44164,
                          "minOffTime": 150,
                          "minOnTime": 10,
                          "name": "center right",
                          "row": 4,
                        },
                      ],
                      "targets": Array [
                        Object {
                          "bank": [Circular],
                          "image": Image {
                            "actual": "redArrow",
                            "changeAttempts": 3,
                            "debounce": 5,
                            "id": 502,
                            "lastActualChange": 42600,
                            "lastPendingChange": 42595,
                            "lastValChange": 42600,
                            "name": "iCenter1",
                            "pending": "redArrow",
                            "val": "redArrow",
                          },
                          "num": 0,
                          "state": false,
                          "switch": Switch {
                            "_state": false,
                            "column": 3,
                            "lastChange": 0,
                            "lastClosed": undefined,
                            "lastOpened": undefined,
                            "minOffTime": 150,
                            "minOnTime": 10,
                            "name": "center left",
                            "row": 4,
                          },
                        },
                        Object {
                          "bank": [Circular],
                          "image": Image {
                            "actual": "redArrow",
                            "changeAttempts": 4,
                            "debounce": 5,
                            "id": 503,
                            "lastActualChange": 42600,
                            "lastPendingChange": 42595,
                            "lastValChange": 42600,
                            "name": "iCenter2",
                            "pending": "redArrow",
                            "val": "redArrow",
                          },
                          "num": 1,
                          "state": true,
                          "switch": Switch {
                            "_state": false,
                            "column": 2,
                            "lastChange": 44162,
                            "lastClosed": 29556,
                            "lastOpened": 44162,
                            "minOffTime": 150,
                            "minOnTime": 10,
                            "name": "center center",
                            "row": 4,
                          },
                        },
                        Object {
                          "bank": [Circular],
                          "image": Image {
                            "actual": "redArrow",
                            "changeAttempts": 4,
                            "debounce": 5,
                            "id": 504,
                            "lastActualChange": 42600,
                            "lastPendingChange": 42595,
                            "lastValChange": 42600,
                            "name": "iCenter3",
                            "pending": "redArrow",
                            "val": "redArrow",
                          },
                          "num": 2,
                          "state": true,
                          "switch": Switch {
                            "_state": false,
                            "column": 1,
                            "lastChange": 44164,
                            "lastClosed": 28122,
                            "lastOpened": 44164,
                            "minOffTime": 150,
                            "minOnTime": 10,
                            "name": "center right",
                            "row": 4,
                          },
                        },
                      ],
                      "tempNodes": Array [],
                    },
                  },
                },
              },
              Object {
                "_name": "PlayerOverrides102",
                "children": Array [],
                "name": "PlayerOverrides102",
                "ownOuts": Object {
                  "kickerEnable": undefined,
                  "leftGate": undefined,
                  "miniFlipperEnable": undefined,
                  "rampUp": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player98",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMiniReady": Array [
                "Red",
              ],
              "lPopperStatus": Array [
                "Red",
              ],
              "lPower1": Array [],
              "lPower2": Array [],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [],
              "leftMagnet": false,
              "rampUp": false,
              "shooterDiverter": undefined,
            },
            "state": Object {
              "_score": 70040,
              "ball": "Ball103",
              "chips": 0,
              "closeShooter": false,
              "focus": "StraightMb116",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "miniReady": false,
              "modesQualified": Array [],
              "rampUp": false,
            },
          },
        ],
        "name": "Game97",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
          "playerUp": 0,
          "players": Array [
            "Player98",
          ],
        },
      },
      Object {
        "_name": "MachineOverrides94",
        "children": Array [
          Object {
            "_name": "EosPulse95",
            "children": Array [],
            "name": "EosPulse95",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides94",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine87",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnet1": Array [],
      "lMagnet2": Array [],
      "lMagnet3": Array [],
      "lMagnet4": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "ballsInTrough": 3,
      "ballsLocked": 0,
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 5,
        "lastChange": 269313,
        "lastClosed": 211124,
        "lastOpened": 269313,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;
